# game-engine

./: .gitattributes  .gitignore  BUGFIXES.md  CHANGES.md  CMakeLists.txt  FINAL_SUMMARY.md  PARSEC_SETUP.md  README.md  WSL2_SETUP.md  bomberman  build.sh  check-parsec.ps1  game-engine  get-parsec-id.ps1  install.sh  launch-with-parsec.bat  launch-with-parsec.ps1  rebuild.sh  test_glfw.sh  todo
include/: Attenuation.hpp  BaseLight.hpp  Camera.hpp  DirectionalLight.hpp  GameState.hpp  GlslProgram.hpp  HandleMeshData.hpp  MainGame.hpp  Material.hpp  Menu.hpp  PhongShader.hpp  PointLight.hpp  Shader.hpp  SpotLight.hpp  Sprite.hpp  TextRenderer.hpp  Texture.hpp  Transform.hpp  Vector.hpp  Vertex.hpp  menu.hpp  menus.hpp  tiny_gltf.h  vertex.h
src/: Attenuation.cpp  BaseLight.cpp  Camera.cpp  DirectionalLight.cpp  GlslProgram.cpp  HandleMeshData.cpp  MainGame.cpp  Material.cpp  Menu.cpp  PhongShader.cpp  PointLight.cpp  Shader.cpp  SpotLight.cpp  Sprite.cpp  TextRenderer.cpp  Texture.cpp  Transform.cpp  Vector.cpp  Vertex.cpp  main.cpp  menu.cpp  menus.cpp
src/shaders/: colorShading.frag  colorShading.vert  menu2D.frag  menu2D.vert  phongShading.frag  phongShading.vert  text.frag  text.vert
